# kuka_robot_stack

./: .gitignore  README.md  setup_felix.bashrc
.qt_for_python/uic/: controller.py
ImfPublisherPlugin/src/: CMakeLists.txt
ImfPublisherPlugin/src/include/imf_publisher_plugin/: algorithm.h  controller.h
ImfPublisherPlugin/src/src/: algorithm.cpp  controller.cpp  controller.ui  main.cpp  unsupported
Live3D-Compounding/: main  main.cpp
Live3D-Compounding/src/: CMakeLists.txt  package.xml
Live3D-Compounding/src/include/live_3d_compounding/: controller.h  factory.h  plugin.h
Live3D-Compounding/src/src/: algorithm.cpp  controller.cpp  controller.ui  factory.cpp  plugin.cpp  sweeper.cpp
ROSCustomStream/src/: CMakeLists.txt  CMakeLists_old.txt  CustomROSPlugin.cpp  CustomROSPlugin.h  package.xml
ROSCustomStream/src/msgs/iiwa_msgs/: CartesianControlModeLimits.h  CartesianEulerPose.h  CartesianImpedanceControlMode.h  CartesianPlane.h  CartesianPose.h  CartesianQuantity.h  CartesianVelocity.h  CartesianWrench.h  ConfigureControlMode.h  ConfigureControlModeRequest.h  ConfigureControlModeResponse.h  ControlMode.h  DOF.h  DesiredForceControlMode.h  JointDamping.h  JointImpedanceControlMode.h  JointPosition.h  JointPositionVelocity.h  JointQuantity.h  JointStiffness.h  JointTorque.h  JointVelocity.h  MoveAlongSplineAction.h  MoveAlongSplineActionFeedback.h  MoveAlongSplineActionGoal.h  MoveAlongSplineActionResult.h  MoveAlongSplineFeedback.h  MoveAlongSplineGoal.h  MoveAlongSplineResult.h  MoveToCartesianPoseAction.h  MoveToCartesianPoseActionFeedback.h  MoveToCartesianPoseActionGoal.h  MoveToCartesianPoseActionResult.h  MoveToCartesianPoseFeedback.h  MoveToCartesianPoseGoal.h  MoveToCartesianPoseResult.h  MoveToJointPositionAction.h  MoveToJointPositionActionFeedback.h  MoveToJointPositionActionGoal.h  MoveToJointPositionActionResult.h  (+31 more)
ROS_RoboticVessel/logs/robotic_vessel/: build.cmake.000.log.stderr
ROS_RoboticVessel/src/: CMakeLists.txt  package.xml
ROS_RoboticVessel/src/include/robotic_vessel/: ContourProperties.h  CustomROSTopicTrackingStream.h  RobotControl.h  SweepRecAndComp.h  algorithm.h  controller.h  factory.h  plugin.h  sweep_rec_and_comp.h  sweeper.h  tracker.h  vesselNet.h  vessel_segmentation_listener.h
ROS_RoboticVessel/src/src/: CustomROSTopicTrackingStream.cpp  RobotControl.cpp  SweepRecAndComp.cpp  algorithm.cpp  controller.cpp  controller.ui  factory.cpp  plugin.cpp  sweep_rec_and_comp.cpp  sweeper.cpp  tracker.cpp  vesselNet.cpp  vessel_segmentation_listener.cpp
ROS_VisionControl/src/: CMakeLists.txt
ROS_VisionControl/src/include/vision_control/: VisionAlgorithm.h  VisionAlgorithm.h.autosave  VisionController.h  VisionController.h.autosave
ROS_VisionControl/src/src/: VisionAlgorithm.cpp  VisionAlgorithm.cpp.autosave  VisionController.cpp  VisionController.cpp.autosave  controller.ui  controller.ui.autosave
iiwa_stack/iiwa_control/src/: iiwa_sunrise.py
iiwa_stack/src/iiwa_ros/include/iiwa_ros/service/: control_mode.hpp  max_speed.hpp
iiwa_stack/src/iiwa_ros/src/service/: control_mode.cpp  max_speed.cpp
republisher/: CMakeLists.txt  package.xml
republisher/src/: publisher.py
vessel_net/src/: CMakeLists.txt  package.xml
vessel_net/src/launch/: segmentation.launch
vessel_net/src/msg/: array_image.msg
vessel_net/src/scripts/: image_publisher.py  image_subscriber.py  pre_processing.py  segmentation.py
