<?xml version="1.0"?>
<package format="2">
    <name>roscustomstream</name>
    <version>0.0.1</version>
    <description>A custom ROS stream example package</description>

    <maintainer email="your-email@example.com">Your Name</maintainer>
    <license>TODO: License</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>   
    <!-- Add other dependencies here -->
</package>