<?xml version="1.0"?>
<package>
  <name>robotic_vessel</name>
  <version>0.0.1</version>
  <description>An empty description</description>

  <license>BSD</license>

  <author email="felix.duelmer@tum.de">Felix Duelmer</author>
  <maintainer email="felix.duelmer@tum.de">Felix Duelmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iiwa_ros</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>iiwa_ros</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
